--- a/pages/404.md
+++ b/pages/404.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: 页面没有找到
-description: 你来到了一片荒芜之地
+description: 但行好事，莫问前程。
 keywords: 404
 comments: false
 permalink: /404.html
